--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   </head>
   <body>
     <h1>This will appear in bold characters</h1>
+    <h2>This title will be smaller than the h1</h2>
   </body>
 </html>
